--- a/TRABALHO.ipynb
+++ b/TRABALHO.ipynb
@@ -29,7 +29,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mypython3version",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
