--- a/Projeto.ipynb
+++ b/Projeto.ipynb
@@ -5,7 +5,7 @@
    "id": "b41b7f89-b132-4f29-aa21-1fbcf3a5f924",
    "metadata": {},
    "source": [
-    "# Dados e Aprendizagem Automática\n",
+    "# **Dados e Aprendizagem Automática**\n",
     "### Projeto"
    ]
   },
