--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2911,7 +2911,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mypython3version",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
