--- a/get_data.ipynb
+++ b/get_data.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "id": "c92e5c67-4622-413c-a7f3-9ca1d7448791",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "id": "19b8c42f-2ee0-4868-8aa6-597e2f912aa0",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "id": "f969f13e-3899-4a02-a281-4db85a05bd95",
    "metadata": {},
    "outputs": [
@@ -292,7 +292,7 @@
        "[5 rows x 2181 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "id": "b70e38ff-3970-4904-85f2-f2a6e49062b6",
    "metadata": {},
    "outputs": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "id": "2d48445d-8eaf-4375-a033-7e08bc9c6b43",
    "metadata": {},
    "outputs": [
@@ -676,7 +676,7 @@
        "[8 rows x 2161 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "id": "6c8a9954-c965-4eda-b75a-bfa1abeebf6b",
    "metadata": {},
    "outputs": [
@@ -708,7 +708,7 @@
        "Length: 2181, dtype: int64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "id": "7c211cc8-007f-403d-9609-8682759e3ca8",
    "metadata": {},
    "outputs": [
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "id": "b4f0d45f-6a40-42b7-a7b4-71061b40ed63",
    "metadata": {},
    "outputs": [
@@ -1264,7 +1264,7 @@
        "[5 rows x 2022 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1278,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "id": "833736ee-7b26-491d-a30b-0d3ed5063f99",
    "metadata": {},
    "outputs": [
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "id": "0ca12b35-3723-4f3b-b54d-b20af9ad6b6c",
    "metadata": {},
    "outputs": [
@@ -1650,7 +1650,7 @@
        "[8 rows x 2013 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1661,7 +1661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "id": "6f3433b5-7e9b-44ec-ac3c-5f56a5a9623e",
    "metadata": {},
    "outputs": [
@@ -1692,7 +1692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "id": "517db9db-a003-4183-9c6b-a5446a833229",
    "metadata": {},
    "outputs": [
@@ -1960,7 +1960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "id": "451bf1e3-f0ba-436f-b2d6-f336d081619f",
    "metadata": {},
    "outputs": [
@@ -2405,7 +2405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 14,
    "id": "2e6b206d-d7ab-4074-9eaf-c3d3c05304e9",
    "metadata": {},
    "outputs": [],
@@ -2415,7 +2415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 15,
    "id": "3074291e-cec2-44a9-ae11-61bb14f3cd16",
    "metadata": {},
    "outputs": [
@@ -2851,7 +2851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 16,
    "id": "dab73bfa-baf2-4a5b-bb8d-2b3e4e18b41f",
    "metadata": {},
    "outputs": [
@@ -2872,7 +2872,7 @@
        "Length: 2015, dtype: int64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2883,7 +2883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 17,
    "id": "ee8f2677-515f-49d2-b223-847677023c9d",
    "metadata": {},
    "outputs": [
@@ -2976,7 +2976,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "mypython3version",
    "language": "python",
    "name": "python3"
   },
